log
Thu 25 Apr 2024 03:33:00 PM UTC: 
 tests:  0|6
total_score: 0/70
881541c
Thu 25 Apr 2024 04:06:32 PM UTC: 
 hashmap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:17: error: expected expression before ‘Pair’
   63 |   map->buckets (Pair *)calloc(capacity,sizeof(Pair*));
      |                 ^~~~
hashmap.c:63:3: error: called object is not a function or function pointer
   63 |   map->buckets (Pair *)calloc(capacity,sizeof(Pair*));
      |   ^~~
hashmap.c:63:24: error: expected ‘;’ before ‘calloc’
   63 |   map->buckets (Pair *)calloc(capacity,sizeof(Pair*));
      |                        ^~~~~~
      |                        ;
Compilation failed
6061d92
Thu 25 Apr 2024 04:06:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:17: error: expected expression before ‘Pair’
   63 |   map->buckets (Pair**)calloc(capacity,sizeof(Pair*));
      |                 ^~~~
hashmap.c:63:3: error: called object is not a function or function pointer
   63 |   map->buckets (Pair**)calloc(capacity,sizeof(Pair*));
      |   ^~~
hashmap.c:63:24: error: expected ‘;’ before ‘calloc’
   63 |   map->buckets (Pair**)calloc(capacity,sizeof(Pair*));
      |                        ^~~~~~
      |                        ;
Compilation failed
b0d8f1c
Thu 25 Apr 2024 04:07:22 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:19: error: ‘HashNode’ undeclared (first use in this function)
   63 |   map->buckets = (HashNode **)calloc(capacity, sizeof(HashNode *));
      |                   ^~~~~~~~
hashmap.c:63:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:63:30: error: expected expression before ‘)’ token
   63 |   map->buckets = (HashNode **)calloc(capacity, sizeof(HashNode *));
      |                              ^
Compilation failed
e818bd6
Thu 25 Apr 2024 04:08:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   63 |   map->buckets = (HashMap **)calloc(capacity, sizeof(HashMap *));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
55b7221
Thu 25 Apr 2024 04:09:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3e619bc
Thu 25 Apr 2024 04:13:42 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96e151c
